Spacing and Hamburger errors fixed

--- a/src/components/navBar.module.css
+++ b/src/components/navBar.module.css
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   background-color: black;
-  border-bottom: 3px solid #000000;
+  border-bottom: 3px solid black;
   /* border-bottom: 3px solid var(--text-black); */
   transition: all 0.2s ease-in-out;
 }
@@ -58,7 +58,7 @@
 }
 
 .activeOption {
-  color: var(--primary-gray);
+  color: var(--primary-white);
 }
 
 .option::before {
@@ -68,7 +68,7 @@
   bottom: -2px;
   width: 0;
   height: 2px;
-  background-color: var(--primary-gray);
+  background-color: var(--primary-white);
   transition: all 0.2s ease-in-out;
 }
 
@@ -90,12 +90,12 @@
 }
 
 .spans {
-  display: contents;
+  display: block;
   width: 100%;
 
   border-radius: 3px;
   height: 8px;
-  background: #000000;
+  background: #ffffff;
   transition: all 0.3s;
   position: relative;
 }
@@ -105,7 +105,7 @@
 }
 
 .active .spans {
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 .active .spans:nth-child(1) {
@@ -242,7 +242,7 @@
   .optionsMenu {
     display: block;
     position: fixed;
-    background-color: #212830;
+    background-color: black;
     top: 0;
     right: -150%;
     color: #000000;
